[project]
name = "podcast-runtime"
version = "1.0.0"
description = "Tally episode runtime for Spotify podcasts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
]

[tool.basedpyright]
reportAny = false

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "D107",
    "D203",
    "D211",
    "D213",
    "RET504",
    "S310",
]
